--- a/app/src/main/res/layout/activity_hierarchy_viewer.xml
+++ b/app/src/main/res/layout/activity_hierarchy_viewer.xml
@@ -192,7 +192,7 @@
 
                         <ImageView
                             android:layout_width="0dp"
-                            android:layout_height="@dimen/hierarchy_viewer_image_height"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:layout_marginStart="@dimen/grid_spacing"
                             android:layout_marginEnd="0dp"
